--- a/projects/adventure-website/adventure-site/index.html
+++ b/projects/adventure-website/adventure-site/index.html
@@ -13,9 +13,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Share+Tech&display=swap" rel="stylesheet">
 <!-- load our reset stylesheet -->
-<link rel="stylesheet" href="../assets/css/reset.css">
+<link rel="stylesheet" href="./assets/css/reset.css">
 <!-- load our main stylesheet -->
-<link rel="stylesheet" href="../assets/css/styles.css">
+<link rel="stylesheet" href="./assets/css/styles.css">
 
 <!-- you could add favicons etc here -->
 
