--- a/projects/adventure-website/live/index.html
+++ b/projects/adventure-website/live/index.html
@@ -13,9 +13,9 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Share+Tech&display=swap" rel="stylesheet">
 <!-- load our reset stylesheet -->
-<link rel="stylesheet" href="./assets/css/reset.css">
+<link rel="stylesheet" href="../assets/css/reset.css">
 <!-- load our main stylesheet -->
-<link rel="stylesheet" href="./assets/css/styles.css">
+<link rel="stylesheet" href="../assets/css/styles.css">
 
 <!-- you could add favicons etc here -->
 
@@ -49,9 +49,9 @@
     </main>
 
     <!-- The content in this file is inserted into the base.html file -->
-<footer class="home">
+<footer>
     <div class="inner-wrapper">
-
+        <p class="par-2"><a class="nav nav-2" href=".../index.html">Back to the Portfolio</a></p>
     </div>
 </footer>
 
