new-build-about

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
       <ul id="menu" class="hamburger-menu-overlay">
         <li><a href="https://portfolio.clairelouisebutler.com" class="hamburger-menu-overlay-link">Home</a></li>
+        <li><a href="https://portfolio.clairelouisebutler.com/about/" class="hamburger-menu-overlay-link">About</a></li>
         
         
       </ul>
@@ -206,16 +207,6 @@
   <article class="card-body">
     <h2 class="card-title">The FABL</h2>
     <p class="card-text">A Fingerprint Activated Bike lock prototype.</p>
-    <div class="card-subtext muted-text">
-      <p>Read More</p>
-    </div>
-  </article>
-</a><a ontouchstart="cardPressed.call(this)" ontouchend="cardReleased.call(this)" ontouchmove="cardReleased.call(this)" 
-  href="https://portfolio.clairelouisebutler.com/about/" class="card blog-card" rel="bookmark" >
-  
-  <article class="card-body">
-    <h2 class="card-title">About</h2>
-    <p class="card-text"></p>
     <div class="card-subtext muted-text">
       <p>Read More</p>
     </div>
